# mespy

./: .envrc  .gitattributes  .gitignore  LICENSE  MakeFile  Makefile  README.md  plan.md  pyproject.toml  requirements.toml
.github/workflows/: docs.yml
data/reference/densità/: campioni_B_C.csv
dati_riferimento/: test_misure.csv
docs/: main.tex  mech-lab-tools.bib  mespy.bib
docs-sphinx/source/: conf.py  getting-started.md  index.md  installazione.md
docs-sphinx/source/_static/: custom.css
docs-sphinx/source/checks/fit_utils/: fit-coefficients.md  validate-positive-scalar.md  validate-positive-vector.md
docs-sphinx/source/checks/plot_utils/: validate-axis-limits.md
docs-sphinx/source/checks/stats_utils/: index.md
docs-sphinx/source/examples/: basic-workflow.md  histogram.ipynb  histogram.md  index.md  linear-fit.ipynb  linear-fit.md  stats-utils.ipynb
docs-sphinx/source/examples/data/: test_linear_fit.csv
docs-sphinx/source/moduli/: index.md
docs-sphinx/source/moduli/fit_utils/: lin-fit.md
docs-sphinx/source/moduli/fit_utils/lin-fit/: panoramica.md
docs-sphinx/source/moduli/io_utils/: load-csv.md
docs-sphinx/source/moduli/plot_utils/: histogram.md
docs-sphinx/source/moduli/plot_utils/histogram/: funzionamento.md  panoramica.md
docs-sphinx/source/moduli/stats_utils/: covariance.md  index.md  median.md  standard-deviation.md  variance.md  weighted-mean.md
docs-sphinx/source/moduli/stats_utils/covariance/: funzionamento.md
docs-sphinx/source/moduli/stats_utils/median/: funzionamento.md
docs-sphinx/source/moduli/stats_utils/variance/: funzionamento.md  panoramica.md
docs-sphinx/source/moduli/stats_utils/weighted-mean/: panoramica.md
docs/LaTeX-docs/sections/: fit_utils.tex  introduzione.tex  plot_utils.tex
docs/sections/: fit_utils.tex  introduzione.tex  io_utils.tex  plot_utils.tex  stats_utils.tex
docs/source/: conf.py  getting-started.md  index.md  installazione.md
docs/source/_static/: custom.css  language-switcher.js
docs/source/_templates/components/: language-switcher.html
docs/source/_templates/sections/: sidebar-primary.html
docs/source/checks/: index.md
docs/source/checks/fit_utils/: index.md  validate-max-iter.md
docs/source/checks/plot_utils/: display-new-figures.md  in-ipython.md  index.md  resolve-style.md  style-context.md  validate-decimals.md  validate-figsize.md
docs/source/checks/stats_utils/: as-float-vector.md  validate-weights.md
docs/source/examples/: histogram.ipynb  index.md  linear-fit.ipynb  plot-style.ipynb
docs/source/locale/en/LC_MESSAGES/: getting-started.po  index.po  installazione.po
docs/source/locale/en/LC_MESSAGES/checks/: index.mo  index.po
docs/source/locale/en/LC_MESSAGES/checks/fit_utils/: fit-coefficients.mo  fit-coefficients.po  index.mo  index.po  (+6 more)
docs/source/locale/en/LC_MESSAGES/examples/: basic-workflow.mo  basic-workflow.po  histogram.mo  histogram.po  index.mo  index.po  linear-fit.mo  linear-fit.po  plot-style.mo  plot-style.po  stats-utils.mo  stats-utils.po
docs/source/locale/en/LC_MESSAGES/moduli/: index.mo  index.po
docs/source/moduli/fit_utils/: index.md  lin-fit.md  linear-fit-result.md
docs/source/moduli/fit_utils/lin-fit/: funzionamento.md  panoramica.md
docs/source/moduli/io_utils/: index.md
docs/source/moduli/io_utils/load-csv/: funzionamento.md  panoramica.md
docs/source/moduli/plot_utils/: histogram.md  index.md
docs/source/moduli/plot_utils/histogram/: funzionamento.md  panoramica.md
docs/source/moduli/stats_utils/covariance/: panoramica.md
docs/source/moduli/stats_utils/median/: panoramica.md
docs/source/moduli/stats_utils/standard-deviation/: funzionamento.md  panoramica.md
docs/source/moduli/stats_utils/weighted-mean/: funzionamento.md
documentazione/: main.tex
documentazione/sezioni/: introduzione.tex  io_utils.tex  plot_utils.tex  stats_utils.tex
experiments/exp01_calibro/: run.py
notebooks/: test_fit_utils.ipynb  test_plot_utils.ipynb  test_stats_utils.ipynb
script/: __init__.py  fit_utils.py  io_utils.py  plot_utils.py  stats_utils.py
scripts/: __init__.py  fit_utils.py  io_utils.py  plot_utils.py  stats_utils.py
src/mech_lab_tools/: __init__.py  fit_utils.py  io_utils.py  plot_utils.py  stats_utils.py
src/mespy/: __init__.py  fit_utils.py  io_utils.py  plot_utils.py  stats_utils.py
src/mespy/stylelib/: column.mplstyle  mespy.mplstyle  pub.mplstyle  report.mplstyle
test/: test_plot_utils.ipynb  test_stats_plot.ipynb  test_stats_utils.ipynb
tests/: test_fit_utils.py  test_io_utils.py  test_plot_utils.py  test_public_api.py  test_stats_utils.py
tools/: check-tex.sh  release-check.sh  smoke_imports.py
(+78 files in other folders)
