[project]
name = "mespy"
version = "1.0.0"
description = "Toolbox Python per l'analisi dei dati di laboratorio"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Giancarmine Sparso", email = "giancarminesparso@gmail.com" }]
requires-python = ">=3.12"
keywords = ["physics", "statistics", "data analysis", "laboratory", "mechanics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/giancarmine-sparso/mespy"
Repository = "https://github.com/giancarmine-sparso/mespy"
Issues = "https://github.com/giancarmine-sparso/mespy/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "setuptools>=68",
    "twine",
    "wheel",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mespy = ["py.typed"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
