[project]
name = "mespy"
version = "1.1.2"
description = "Toolbox Python per l'analisi dei dati di laboratorio"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Giancarmine Sparso", email = "giancarminesparso@gmail.com" }]
requires-python = ">=3.12"
keywords = ["physics", "statistics", "data analysis", "laboratory", "mechanics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/giancarmine-sparso/mespy"
Repository = "https://github.com/giancarmine-sparso/mespy"
Issues = "https://github.com/giancarmine-sparso/mespy/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "setuptools>=68",
    "twine",
    "wheel",
    "ipykernel",
    "sphinx>=9.1.0",
    "pydata-sphinx-theme>=0.16.1",
    "myst-nb>=1.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-intl",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mespy = ["py.typed", "stylelib/*.mplstyle"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
    "pydata-sphinx-theme>=0.16.1",
    "myst-nb>=1.3.0",
    "sphinx-copybutton>=0.5.2",
]
docs = [
    "sphinx-intl>=2.3.2",
]
